# ai-invention-a2051b-ontology-grounded-semantic-unification-w

./: README.md
prompts/: README.md
prompts/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
prompts/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md
prompts/2_test_idea/round_1/2_gen_plan/: gen_plan_dataset_1.md  gen_plan_experiment_1.md  gen_plan_research_1.md
prompts/2_test_idea/round_1/3_gen_art/: gen_art_dataset_1.md  gen_art_experiment_1.md  gen_art_research_1.md
prompts/2_test_idea/round_2/: 1_gen_strat.md
prompts/2_test_idea/round_2/2_gen_plan/: gen_plan_dataset_1.md  gen_plan_experiment_1.md
prompts/3_report_results/1_gen_demo_art/: gen_demo_art_experiment_1.md
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json
